// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The level manager Matches the current snapshot 1`] = `""`;

exports[`The level manager Matches the current snapshot when the levels are loading 1`] = `
<styled.section
  id="level-manager"
>
  <Component />
</styled.section>
`;

exports[`The level manager Matches the current snapshot when the levels have loaded without issue 1`] = `
<styled.section
  id="level-manager"
>
  <Connect(Component) />
  <Connect(Component) />
</styled.section>
`;

exports[`The level manager Matches the current snapshot when there was an error loading the levels 1`] = `
<styled.section
  id="level-manager"
>
  <Connect(Component) />
</styled.section>
`;
